--- a/Final Documentation/Appendix/References.tex
+++ b/Final Documentation/Appendix/References.tex
@@ -45,6 +45,29 @@
 	
 	\bibitem{modeltransform} S. Sendall and W. Kozaczynski, {\em Model transformation: the heart and soul of model-driven software development},  IEEE, Vol. 20, Issue: 5, pages 42-45, Sept.-Oct. 2003.
 	
+	\bibitem{designpattern} E. Gamma, R. Helm, R. Johnson and J. Vlissides, {\em Design Patterns},  Addison-Wesley, Boston Massachusetts USA, vol. 47, 1995.
+	
+	\bibitem{designpattern-notes} E. Gamma, R. Helm, R. Johnson and J. Vlissides, {\em Design Patterns: Abstraction and Reuse of Object-Oriented Design}, In Nierstrasz O.M. (eds) ECOOP 1993 - Object-Oriented Programming. Lecture Notes in Computer Science, vol 707. Springer, Berlin, Heidelberg.
+	
+	\bibitem{mvc-arch} J. Deacon, { \em Model-view-controller (mvc) architecture}, Computer Systems Development, pages 1-6, 2009.
+	
+	\bibitem{mdd-webwithmvc} D. Distante, P. Pedone, G. Rossi and G. Canfora, { \em Model-driven development of Web applications with UWA, MVC and JavaServer faces}, Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics) 4607, pages 457-472, 2007.
+	
+	\bibitem{designpattern-headfirst} E. Freeman, E. Robson, K. Sierra and B. Bates, { \em Head First Design Patterns}, O'Reilly, USA, Pages 536-566, 2004.
+	
+	\bibitem{canvas} {\em MDN, "Canvas API",} Retrieved May, 2017, from https://developer.mozilla.org/en-US/docs/Web/API/Canvas\_API.
+	
+	\bibitem{fabricjs} {\em Fabric.js,} [Online]. Available: http://fabricjs.com/.
+	
+	\bibitem{processingjs} {\em Processing.js,} [Online]. Available: http://processingjs.org/.
+	
+	\bibitem{pixijs} {\em Pixi.js,} [Online]. Available: http://www.pixijs.com/.
+	
+	\bibitem{javascript} D. Goodman and M. Morrison, {\em Javascript Bible}, Wiley Publishing Inc., 6th Edition, pages 1-8, Indianapolis, Indiana, 2007.
+	
+	\bibitem{designinterfaces} J. Tidwell, {\em Designing interfaces}, O'Reilly, vol. XXXIII, Pages 81-87, 2012.
+	
+	\bibitem{scenariobasedui} K. Kusano, M. Nakatani and T. Ohno, {\em Scenario-based interactive UI design}, Proceedings of the SIGCHI Conference on Human Factors in Computing Systems - CHI '13, 391,  2013.
 	
 \end{thebibliography}
 
