--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -74,6 +74,7 @@
 \usepackage{listings}
 
 \usepackage{parskip}
+\usepackage{hyperref}
 
 \RequirePackage{xspace}
 
@@ -112,8 +113,8 @@
 		%then: create a bastard title
 		\thispagestyle{empty}
 		\begin{center}
-			{\vspace*{170pt}\Large\textbf{A Demonstrator Framework\\[5pt] 
-					for Consistency Management Approaches}}\\[30pt]
+			{\vspace*{170pt}\Large\textbf{A Demonstrator Framework for\\[5pt] 
+					Consistency Management Approaches}}\\[30pt]
 			by\\[15pt]
 			{\large Arjya Shankar Mishra}
 		\end{center}
@@ -127,8 +128,8 @@
 			\includegraphics[width=12cm]{figures/Logo_Uni_Paderborn}\\
                       
       		\vspace{3cm}
-			{\LARGE  \textbf{A Demonstrator Framework\\ [7pt]
-					for Consistency Management Approaches}} \\ 
+			{\LARGE  \textbf{A Demonstrator Framework for\\ [7pt]
+					Consistency Management Approaches}} \\ 
 			\vspace{0,7cm}
 			{\Large Master's Thesis }\\[6pt]
 			Submitted to the Fakultät f\"ur EIM, Institut f\"ur Informatik\\
