--- a/Final Documentation/Requirements/Requirements.tex
+++ b/Final Documentation/Requirements/Requirements.tex
@@ -1,27 +1,36 @@
 \section{Requirements}\label{sec:requirements}
-This chapter explains all the requirements needed to implement a successful demonstrator. Section \ref{subsec:functionalreq} describes all the functional requirements. Afterwards, Section \ref{subsec:nonfunctionalreq} deals with all the non-functional requirements. Then, Section \ref{subsec:choicesthreats} describes some of the choices that I made during research and  implementation work and its associated threats. 
+This chapter explains all the requirements needed to implement a successful demonstrator. Section \ref{subsec:functionalreq} describes all the functional requirements. Afterwards, Section \ref{subsec:nonfunctionalreq} deals with all the non-functional requirements followled by Section \ref{subsec:choicesthreats}, which describes some of the choices that I made during research and  implementation work and its associated threats. 
 
+To avoid failure and for the smooth functioning of any project, the basic and foremost need is requirement. Generally requirements are of two types: functional and non-functional. 
 \subsection{Functional}\label{subsec:functionalreq}
-\paragraph{Learning Goals}
-Along with exploring the challenges as described in Section \ref{subsec:objectives}, I am also focussing on teaching some basic concepts(functional requirements, referred to as \textbf{FREQ} from now on) to the user about bx in the process of trying/playing with the demonstrator.
+Functional requirements define the behaviours of a system or in simple terms what a system should do. Hence it describes all the behavioural attributes of a system.
+\newline\newline As my thesis is more focussed on the implementation of a demonstrator for consistency management based on a bx tool, following are some of the functional end results (referred to as \textbf{FREQ} from now on) I am trying to achieve:
 
-What am I trying to teach?
-\begin{itemize} 
-	\item {\textbf{\textit{FREQ1}} -- Bidirectional is not always bijective.} 
-	\item {\textbf{\textit{FREQ2}} -- Not all changes can be propagated. In this case, consistency needs to be preserved.}
-	\item {\textbf{\textit{FREQ3}} -- In BX, Challenge is to avoid or minimise information loss.}
-	\item {\textbf{\textit{FREQ4}} -- Current limitation - you can only change one side.}
-	\item {\textbf{\textit{FREQ5}} -- Synchronisation is interactive (to handle non-determinism).}	
-\end{itemize}
+\textbf{\textit{FREQ1}}: Reduce the installation time of the bx tool\\
+The demonstrator should not take much time to install and should be up and running very fast. By making the demonstrator available online, user needs nothing to install on his/her machine. User have to enter the url on the browser and hence just a click away from trying the demonstrator based on a bx tool.\\\\
+\textbf{\textit{FREQ2}}: Demonstartor should be fun to play with.\\
+The demonstrator should be able to attract more users by exploiting the features of the GUI and colors. It should be interactive and fun to play with during the entire process so that the user sticks to it.\\\\
+\textbf{\textit{FREQ3}}: Demonstrator's example should be simple\\
+The user is going to try/use the demonstrator based on an example. This example should rather be less complex and less technical to understand to create interest and convince more target audience. Also, user should be able to relate to the bx concepts through the example.\\\\
+\textbf{\textit{FREQ4}}: Demonstrator should be able to guide the user\\
+During the entire time while the user is using the demonstrator, it should be able to provide clear instructions/guidelines on what the user can do and try with it. User should not feel like what to do with the demonstrator after a few minutes. Demonstrator should guide the user with the all the aspects that is intended to be taught/learned with it.\\\\
+\textbf{\textit{FREQ5}}: Demonstrator should be informative\\
+Rather being just a online playing tool, the user should learn certain concepts of bx by using the demonstrator. User should be able to relate to the concepts taught by the demonstrator with its scenarios.
+
 \subsection{Non-Functional}\label{subsec:nonfunctionalreq}
-As my thesis is more focussed on the implementation of a demonstrator for consistency management based on a bx tool, following are some of the non-functional end results (referred to as \textbf{NREQ} from now on) I am trying to achieve:
-\begin{itemize} 
-	\item {\textbf{\textit{NREQ1}} -- Reduce the installation time of the bx tool by making the demonstrator available online. Hence, the user is just a click away to try the bx tool and needs nothing to install on his/her machine.} 
-	\item {\textbf{\textit{NREQ2}} -- Demonstartor should be interactive and fun to play with.}
-	\item {\textbf{\textit{NREQ3}} -- Demonstrator's example should not be too technical and rather be simple to attract more users. Also, user should be able to relate to the bx concepts through the example.}
-	\item {\textbf{\textit{NREQ4}} -- Demonstrator should be able to guide the user in the whole playing/learning process.}
-\end{itemize}
-\subsection{Technical}\label{subsec:technicalreq}
+Non-functional requirements cover all the remaining requirements which are not covered by the functional requirements. Hence it describes all the quality attributes of a system.
+\newline\newline Following are some of the non-functional end results (referred to as \textbf{NREQ} from now on) I am trying to achieve:
+
+\textbf{\textit{NREQ1}}: Public access\\
+The demonstrator should be accessible world-wide to all. Being a web-application, it should be deployed on a web-server and accessible to the public through its url.\\\\ 
+\textbf{\textit{NREQ2}}: Platform independent\\ 
+Application should be platform independent i.e., it should run on any operating system and all kinds of browser. Different environment on user's machine should not affect application.\\\\
+\textbf{\textit{NREQ3}}: Robost\\
+Application architecture should be easily maintainable and extendable. With changing requirements and needs, application architecture should be able to accomodate new changes and future enhancements.\\\\
+\textbf{\textit{NREQ4}}: Easily deployable project\\
+Application's deployment process on the web-server to get it running should not be complex. Rather, it should involve simple steps so that it can be carried out by anyone.\\\\
+\textbf{\textit{NREQ5}}: Products, technologies and tools\\
+Updated version of the products, technologies and tools should be used as per the requirements during the implementation work so that future enhancements can ce carried out easily.
 
 \subsection{Choices and Threats}\label{subsec:choicesthreats}
 The implementation process and the final prototype was driven by many choices and threats. For example, 
