--- a/Final Documentation/Implementation/Implementation.tex
+++ b/Final Documentation/Implementation/Implementation.tex
@@ -17,7 +17,16 @@ On the top, \texttt{View} (Web Browser) component is present which contains a gr
 \subsection{Core Details}\label{subsec:coredetails}
 
 \subsection{Challenges}\label{subsec:implchallenges}
-Bx tool - implementing atomic deltas to track successful/failed changes translation, user interaction 
+\paragraph{Bx Tool}
+selecting the type of delta (refer def.)
+implementing atomic deltas to track successful/failed changes translation. 
+
+\paragraph{UI Implementation}
+Designing the user interactions with high-level view was relatively easy as user have to deal with the objects with actions such as, mouse movements and button clicks. But, the real challenge was to handle the user interactions in low-level view's block structure. In low-level view, only addition and removal of objects are allowed and objects will be shown by unique colors. 
+
+\paragraph{User Choice Selection}
+
+\paragraph{Handling Multiple User Request}
  
 
 
