--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -66,16 +66,12 @@ This document is structured as follows:
 Chapter 1 (introduction) contains the introduction and motivation about the thesis with a solution strategy. Chapter 2 discusses the related terminologies with respect to bidirectional transformation. Chapter 3 describes the requirements for implementing a successful bx demonstrator. Chapter 4 explains the related work that has been done on bx in last few years and the related problems. Chapter 5 describes all the high-level concepts of my implementation work in brief with related diagrams. Chapter 6 provides the in-depth details of each implementation layer along with UML diagrams. Chapter 7 presents a walkthrough of the application from UI perspective. Chapter 8 contains the feedback from user groups, evaluation results and learning goals(based on research questions). Last chapter summarizes all the work which was done as part of this thesis and draws useful conclusions followed by future work.
 
 \section{Foundation}\label{sec:foundation}
-This chapter describes some commonly used terminologies with respect to bx and their definitions in the software industry. These definitions will help the reader in understanding the further chapters.
+This chapter provides an overview of my running example in Section \ref{subsec:runningexample} followed by definitions of some commonly used terminologies with respect to bx in Section \ref{subsec:definitions}. This chapter will lay the foundation for understanding the basics for the reader and will help him/her in apprehending the concepts explained in further chapters.
+
+In this thesis, bidirectional transformation will be discussed by referring to a \textit{Kitchen Model} and a \textit{Grid Model} of a software system. Both the models describes the structure and behaviour of the real system "kitchen" but from different perspectives.
 
 \subsection{Running Example}\label{subsec:runningexample}
-In this thesis, bidirectional transformation will be discussed by referring to a \textit{Kitchen Model} and a \textit{Grid Model} of a software system. Both the models describes the structure and behaviour of the real system "kitchen" but from different perspectives.
-\newline\newline Fig. 1.1 demonstrates the relation between the two models in the form of class diagrams (describes a system from an object-oriented point of view) in UML notation. Kitchen class diagram contains three classes i.e., \textit{Kitchen}, \textit{Item Socket} and \textit{Item}. \textit{Kitchen} class contains \textit{itemSockets} and a \textit{Item Socket} class contains an \textit{item}.
-Furthetmore, Grid class diagram contains three classes i.e., \textit{Grid}, \textit{Group} and \textit{Block}. \textit{Grid} class contains \textit{groups} and \textit{Group} class contains \textit{blocks}. Here, the \textit{Kitchen} class corresponds to the \textit{Grid} class and a \textit{Item Socket} class corresponds to a \textit{Group} class. 
-\newline\newline Both artifacts are created and evolved together during
-the lifecycle of the application representing a kitchen workspace throughout. Thus, changes in
-one domain should be propagated to the other domain in order to ensure consistency
-between these related artifacts. Model transformation and synchronization is discussed with this scenario throughout this thesis. 
+This example is a simplified kitchen planner. Figure~\ref{fig:Running_Example_GUI} describes the relation between the \textit{Kitchen Model} denoted by \textit{Kitchen} (right-hand side canvas) and the \textit{Grid Model} denoted by \textit{Layout} (left-hand side canvas) from GUI point of view. 
 
 \begin{figure}
 	\includegraphics[width=1\textwidth]{figures/KitchenToGrid}
@@ -83,24 +79,21 @@ between these related artifacts. Model transformation and synchronization is dis
 	\label{fig:Running_Example_GUI}
 \end{figure}
 
-Figure~\ref{fig:Running_Example_GUI} describes the relation between the \textit{Kitchen Model} denoted by \textit{Kitchen} (right-hand side canvas) and the \textit{Grid Model} denoted by \textit{Layout} (left-hand side canvas) from GUI point of view. The item e.g., \textit{sink} created in the \textit{Kitchen} corresponds to a group in the \textit{Layout}. Further, changes in the state of any item in either model will be propagated to the other to ensure consistency between each other is denoted by Figure~\ref{fig:Running_Example_GUI_consistency}.
-
 \begin{figure}
 	\includegraphics[width=1\textwidth]{figures/KitchenToGrid_consistency}
 	\caption{Running Example: GUI (consistency preservation)}
 	\label{fig:Running_Example_GUI_consistency}
 \end{figure}
 
+\textit{Kitchen} contains items e.g., sink, fridge, table etc. You can create, delete or move these items in the kitchen space, and press "Sync" to propagate your changes to the layout. The \textit{Layout} consist of groups with certain number of blocks. This shows how much space the objects occupy as coloured groups of blocks organised in a grid. Here, the \textit{Kitchen} corresponds to the \textit{Layout} and a \textit{Item} corresponds to a \textit{Group}. This is described by Figure~\ref{fig:Running_Example_GUI} where an item e.g., \textit{sink} created in the \textit{Kitchen} corresponds to a group in the \textit{Layout}.
+\newline\newline Both artifacts are created and evolved together during the lifecycle of the application representing a kitchen workspace throughout. Thus, changes in one domain should be propagated to the other domain in order to ensure consistency between these related artifacts. This phenomenon is showed by Figure~\ref{fig:Running_Example_GUI_consistency}.
+\newline\newline Model transformation and synchronization is discussed with this scenario throughout this thesis. 
+
 \subsection{BX Basics}\label{subsec:definitions}
-\paragraph{Definition 1} (\textit{Model})\\
-A model depicts the structure and/or behavior of the system under discussion from a certain viewpoint and at a certain level of abstraction which helps in managing and understanding the complexities of a system \cite{uml} \cite{mdsd}. It is denoted as "M".
-\newline\newline Model is an artefact or external representation of reality which reflects certain relevant aspects of a real system. 
-\begin{itemize}
-\item {Artefact, because it is something artificial, not real.}
-\item {External representation, because it can be a drawing, a physical object or software generated on a computer.}
-\item {Certain relevant aspects, because it contains some properties related to the real system.}
-\end{itemize}
-\textit{Example:} In my demonstrator, the example that I have implemented has two models i.e., Kitchen and Grid. Both the models represent the reality "Kitchen". A relation between reality and models is shown in Table~\ref{tab:Model_Reality} and a concrete example of both the models is shown in the figure in the form of class diagrams.
+\paragraph{Definition 1} (\textit{Model and Meta-Model})\\
+A model depicts the structure and/or behavior of a real system under discussion from a certain point of view and at a certain level of abstraction which helps in managing and understanding the complexities of a system \cite{uml} \cite{mdsd}. It is denoted as "M". Model cretion helps in keeping a clear focus on selected concepts and rules relevant for a particular concern and omitting irrelevant details.
+\newline\newline A meta-model 
+\newline\newline \textit{Example:} In my demonstrator, the example that I have implemented has two models i.e., \textit{Kitchen} and \textit{Grid}. Both the models represent the reality "Kitchen". A relation between reality and models is shown in Table~\ref{tab:Model_Reality}. Whereas, figure~\ref{fig:Abstract_KitchenModel} shows an abstract view of the \textit{Kitchen} model and figure~\ref{fig:Concrete_KitchenModel} depicts a concrete example of \textit{Kitchen} model.
 
 \begin{table}
 	\centering	
@@ -114,7 +107,7 @@ A model depicts the structure and/or behavior of the system under discussion fro
 			\item Area of a kitchen as a white space
 			\item 4 Walls of a kitchen
 			\item contains the objeccts of a kichen
-			\item Creating, Moving, Deletion of kitchen objects
+			\item Creation, Movement, Deletion of kitchen objects
 		\end{itemize}\\
 		\hline
 		Kitchen & Grid Model & 
@@ -122,7 +115,7 @@ A model depicts the structure and/or behavior of the system under discussion fro
 			\item Area of a kitchen as a block structure
 			\item 4 Walls of a kitchen
 			\item contains the objeccts of a kichen
-			\item Creating, Deletion of kitchen objects
+			\item Creation, Deletion of kitchen objects
 		\end{itemize}\\
 		\hline					
 		
@@ -131,23 +124,24 @@ A model depicts the structure and/or behavior of the system under discussion fro
 	\caption{Model and Reality}
 \end{table}
 
+\begin{figure}
+	\includegraphics[width=0.5\textwidth]{figures/KitchenModel_Abstract}
+	\caption{Abstract Kitchen Model}
+	\label{fig:Abstract_KitchenModel}
+\end{figure}
+
+\begin{figure}
+	\includegraphics[width=0.5\textwidth]{figures/Kitchen_Concrete}
+	\caption{Concrete Kitchen Model}
+	\label{fig:Concrete_KitchenModel}
+\end{figure}
+
 \paragraph{Definition 2} (\textit{Modeling})\\
 Modeling is the process which allows a developer to specify, visualize and capture a variety of important characteristics of a system in corresponding models which helps in decision making during development stages \cite{uml}. Nowadays, Unified Modeling Language (UML) \cite{uml} is used to visualize models in an object-oriented fashion.
-\newline\newline\textit{Example:} In my demonstrator example, the process of identifying and constructing the "Kitchen Model" and "Grid Model" with the characteristics that is required for the task is a concrete example of modeling. An overview of both the models is given in the figure in the form of class diagrams. figure~\ref{fig:Modeling_Example}.
+\newline\newline\textit{Example:} In my demonstrator example, the process of identifying and constructing the "Kitchen Model" with the characteristics that is required for the task is an example of modeling. \textit{Kitchen} model contains three classes i.e., \textit{Kitchen}, \textit{Item Socket} and \textit{Item}. \textit{Kitchen} class contains \textit{itemSockets} and a \textit{Item Socket} class contains an \textit{item}. Figure~\ref{fig:Abstract_KitchenModel} shows an abstract view of the \textit{Kitchen} model 
 
 \paragraph{Definition 3} (\textit{Delta})\\ 
-Delta is the change done to one or more properties of an artefact. It denotes the relationships between models from the same model space \cite{benchmarx-reload}. It is denoted as $\delta$.
-\begin{figure}
-	\includegraphics[width=1\textwidth]{figures/Delta}
-	\caption{Delta Propagation}
-	\label{fig:Delta_Propagation}
-\end{figure}
-
-\begin{figure}
-	\includegraphics[width=1\textwidth]{figures/Delta_Concrete}
-	\caption{Delta Propagation (Concrete Example)}
-	\label{fig:Delta_Propagation_Concrete}
-\end{figure}
+Delta is the change done to one or more properties of an artefact. It denotes the relationships between models from the same model space \cite{benchmarx-reload}. It is denoted $\delta$: M $\longrightarrow$ M' where M' is an updated version of M.
 
 \begin{table}
 	\centering	
@@ -169,65 +163,79 @@ Delta is the change done to one or more properties of an artefact. It denotes th
 	\caption{Examples of Delta}
 \end{table}
 
-\textit{Example:} Figure~\ref{fig:Delta_Propagation} shows a delta propagation denoted as $\delta$: M $\longrightarrow$ M' where M' is an updated version of M.\\
-In my demonstrator example, deltas related to the "Kitchen Model" are described in Table~\ref{tab:Examples_of_Delta} and a concrete example is shown in Figure~\ref{fig:Delta_Propagation_Concrete}, where creation of a new item e.g., sink causes the updation Kitchen to Kitchen'.
+\begin{figure}
+	\includegraphics[width=1\textwidth]{figures/Delta_Abstract}
+	\caption{Delta Propagation (Abstract Example)}
+	\label{fig:DeltaPropagation_Abstract}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=1\textwidth]{figures/Delta_Concrete}
+	\caption{Delta Propagation (Concrete Example)}
+	\label{fig:DeltaPropagation_Concrete}
+\end{figure}
 
-\paragraph{Definition 4} (\textit{Structural Delta})\\ 
+\textit{Example:} In my demonstrator example, deltas related to the "Kitchen Model" are described in Table~\ref{tab:Examples_of_Delta}. Whereas, figure~\ref{fig:DeltaPropagation_Abstract} shows an abstract view of delta propagation and figure~\ref{fig:DeltaPropagation_Concrete} depicts a concrete example of delta propagation, where creation of a new item e.g., sink causes the updation from Kitchen to Kitchen'.
+
+\paragraph{Definition 3.1} (\textit{Structural Delta})\\ 
 Structural Delta denoted as "s-delta" is the collection of changes done to a model to update it, which is compatible with structure \cite{benchmarx-reload}. The way the changes are applied to the original model to result in a updated model (models of the same model space) don't necessarily have to be in the order in which they are performed. 
 
-\paragraph{Definition 5} (\textit{Operational Delta})\\  
+\paragraph{Definition 3.2} (\textit{Operational Delta})\\  
 Operational Delta denoted as "o-delta" is the collection of operational specification changes done to a model to update it \cite{benchmarx-reload}. It is important that the changes are applied to the original model to result in a updated model (models of the same model space) have to be in the order in which they are performed. 
 
-\paragraph{Correspondence Links} Relationships between models from different model spaces are called correspondence links, or just corrs \cite{benchmarx-reload}. A corr is a set of links 
-r(a; b) between elements (a in A, b in B), which are compatible with the models' structure and denoted by double bidirectional arrows, e.g., R: A $\Longleftrightarrow$ B. 
-\newline\newline\textit{Example:} In my demonstrator example, an example of a corr is r(group; itemSocket) where \textit{group}, \textit{itemSocket} are the elements of Grid and Kitchen Model respectively. Refer Figure~\ref{fig:Corr}.
+\paragraph{Definition 4} (\textit{Model Space})\\
+Model Space describes all the states of an artefact and all the deltas which lead from one state to another.
+\begin{figure}
+	\includegraphics[width=1\textwidth]{figures/Model_Space}
+	\caption{Model Space}
+	\label{fig:Model_Space}
+\end{figure}
+\newline\newline\textit{Example:} In my demonstrator example, an concrete example of a model space is shown in figure~\ref{fig:Model_Space} with all the states i.e., Kitchen1, Kitchen2, Kitchen3, Kitchen4 along with its deltas i.e., $\delta$1, $\delta$2, $\delta$3 of the \textit{Kitchen} Model.
+
+\paragraph{Definition 5} (\textit{Correspondence Links})\\
+Relationships between models from different model spaces are called correspondence links, or just corrs \cite{benchmarx-reload}. A corr is a set of links  r(a; b) between elements (a in A, b in B), which are compatible with the models' structure and denoted by double bidirectional arrows, e.g., R: A $\Longleftrightarrow$ B. 
+\newline\newline\textit{Example:} In my demonstrator example, an example of a corr is r(group; itemSocket) where \textit{group}, \textit{itemSocket} are the elements of \textit{Grid} and \textit{Kitchen} model respectively. Figure~\ref{fig:Correspondence_Links} shows a concrete example of the corr.
 \begin{figure}
 	\includegraphics[width=1\textwidth]{figures/Corr}
 	\caption{Correspondence Links}
-	\label{fig:Corr}
+	\label{fig:Correspondence_Links}
 \end{figure}
 
-\paragraph{Transformation} is the process in which an artefact undergo a change from one model to another model (models from different model spaces) expressed in either same abstraction level or in different abstraction level. Refer Figure~\ref{fig:Transformation}.
+\paragraph{Definition 6} (\textit{Transformation})\\
+Transformation is the process in which takes one or more source models as input and produce one or more target models as output (models from different model spaces) expressed in either same abstraction level or in different abstraction level following a set of transformation rules \cite{modeltransform}. 
+
 \begin{figure}
-	\includegraphics[width=1\textwidth]{figures/Transformation}
-	\caption{Transformation}
-	\label{fig:Transformation}
+	\includegraphics[width=1\textwidth]{figures/Transformation_Abstract}
+	\caption{Transformation (Abstract Diagram)}
+	\label{fig:Transformation_Abstract}
 \end{figure}
-\\\\\textit{Forward Transformation} is the transformation from \textit{Source} model to \textit{Target} model.
-\\\\\textit{Backward Transformation} is the transformation from \textit{Target} model to \textit{Source} model.
-\newline\newline\textit{Example:} In my demonstrator example, "Grid Model" is the \textit{Source} model and "Kitchen Model" is the \textit{Target} model. Forward transformation will cause "Grid Model" to change into "Kitchen Model" and Backward transformation will cause "Kitchen Model" to change into "Grid Model". Refer Figure~\ref{fig:FWDBKDTransformation}.
+
+\paragraph{Definition 6.1} (\textit{Forward Transformation})\\
+Forward Transformation is the transformation from the \textit{Source} model to the \textit{Target} model.
+
+\paragraph{Definition 6.2} (\textit{Backward Transformation})\\ 
+Backward Transformation is the transformation from the \textit{Target} model to the \textit{Source} model.
+\newline\newline\textit{Example:} In my demonstrator example, "Grid Model" is the \textit{Source} model and "Kitchen Model" is the \textit{Target} model. Forward transformation will cause "Grid Model" to transform into "Kitchen Model" and Backward transformation will cause "Kitchen Model" to transform into "Grid Model". Figure~\ref{fig:Transformation_Abstract} shows an abstract example of the transformation process and figure~\ref{fig:Transformation_Concrete} depicts a concrete example of the transformation process describing both forward and backward transformation.
+
 \begin{figure}
-	\includegraphics[width=1\textwidth]{figures/FWDBKDTransformation}
-	\caption{Forward and Backward Transformation}
-	\label{fig:FWDBKDTransformation}
+	\includegraphics[width=1\textwidth]{figures/Transformation_Concrete}
+	\caption{Transformation (Concrete Diagram)}
+	\label{fig:Transformation_Concrete}
 \end{figure}
 
-\paragraph{State Space} describes all the states of an artefact and all the deltas which lead from one state to another.
-\begin{figure}
-	\includegraphics[width=1\textwidth]{figures/State_Space}
-	\caption{State Space}
-	\label{fig:StateSpace_Diagram}
-\end{figure}
-\newline\newline\textit{Example:} In my demonstrator example, all the states of Kitchen Model along with its deltas are shown in Figure~\ref{fig:StateSpace_Diagram}.
+\paragraph{Definition 7} (\textit{Consistency})\\ 
+Changes in one model may or may not cause any change in other model (models from different model spaces) but their states must not contain any contradiction. It is checked on the set of all corrs related to both the models, R: A $\Longleftrightarrow$ B, i.e., the corr R is consistent, or R is inconsistent \cite{benchmarx-reload}.
+\newline\newline In layman's term, consistent is a state which always involves 2 or more objects/artefacts but doesn't involve ambiguity between them. This is the most important part of the model transformation and the entire focus revolves around it. To be consistent with each other the models have to be inline with respect to their states. 
+\newline\newline\textit{Example:} In my demonstrator example, an example of a corr is r(group; itemSocket) where \textit{group}, \textit{itemSocket} are the elements of \textit{Grid} and \textit{Kitchen} Model respectively. Figure~\ref{fig:Running_Example_GUI} and Figure~\ref{fig:Running_Example_GUI_consistency} shows that changes in \textit{Kitchen} model i.e., movement of sink should be propagated to the \textit{Grid} model in order to ensure consistency.
 
-\paragraph{Consistency} In layman's term, consistent is a state which always involves 2 or more objects/artefacts but doesn't involve ambiguity between them. This is the most important part of the model transformation and the entire focus revolves around it. To be consistent with each other the models have to be inline with respect to their states. Changes in one model may or may not cause any change in other model (models from different model spaces) but their states must not contain any contradiction. It is checked on the set of all corrs related to both the models,
-R: A $\Longleftrightarrow$ B, i.e., the corr R is consistent, or R is inconsistent \cite{benchmarx-reload}.
-
-\paragraph{Unidirectional vs.Bidirectional Transformation}  Unidirectional is the simplest one out of all kinds of transformation. It always takes one type of input and produces same type of output. The concept of consistency is very simple as the input model is consistent with the output model, only.
+\paragraph{Definition 8} (\textit{Unidirectional vs.Bidirectional Transformation})\\ 
+Unidirectional is the simplest one out of all kinds of transformation. It always takes one type of input and produces same type of output. The concept of consistency is very simple as the input model is consistent with the output model, only.
 \newline Whereas, bidirectional transformationis a pair of transformation which takes place in both forward and backward direction. One model can be input sometimes and output at some other time. The concept of consistency is relatively complex as more than one model and the models must be kept consistent. Source model ($M_{S}$) is transformed to target model ($M_{T}$) in forward transformation and vice-versa in backward transformation. It is denoted by "BX". 
-\newline Figure~\ref{fig:BX_Diagram} describes the concept in detail.
+\newline\newline\textit{Example:} In my demonstrator example, figure~\ref{fig:BX_Diagram} shows an abstract example of the "BX" and figure~\ref{fig:Transformation_Concrete} depicts a concrete example of the "BX" process.
+
 \begin{figure}
 	\includegraphics[width=1\textwidth]{figures/BX}
 	\caption{Bidirectional Transformation}
 	\label{fig:BX_Diagram}
-\end{figure}
-
-\paragraph{Bijective Transformation}  In bijective transformation, every element of a model is paired with exactly one element of another model (models from different model spaces).
-Refer Figure~\ref{fig:Bijective}.
-\begin{figure}
-	\includegraphics[width=1\textwidth]{figures/Bijective}
-	\caption{Bijective Transformation}
-	\label{fig:Bijective}
 \end{figure}
 
  
